<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appdev.playover.EditProfile_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:visibility="visible"
            tools:src="@drawable/profile_avatar_placeholder" />

        <ImageView
            android:id="@+id/pickedImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/editImageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:paddingBottom="15dp"
            android:text="@string/editImage"
            android:textColor="#4CAF50"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/editNames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/editImageText"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/first_name_signup"
                android:inputType="text" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/last_name_signup"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/editNames"
            android:orientation="vertical">

            <TextView
                android:id="@+id/birthdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:text="@string/birthdayText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:id="@+id/spinnerLayout">

                <Spinner
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:padding="7dp"
                    android:layout_height="40dp" />

                <Spinner
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:padding="7dp"
                    android:layout_height="40dp" />

                <Spinner
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:padding="7dp"
                    android:layout_height="40dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/relationshipText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="15dp"
                android:text="@string/relationship" />

            <Spinner
                android:id="@+id/relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/relationship"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" />

            <EditText
                android:id="@+id/editGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/editGroup"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:background="@android:drawable/edit_text" />

            <EditText
                android:id="@+id/editPosition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/position_signup"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:background="@android:drawable/edit_text" />

            <EditText
                android:id="@+id/editInterests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/editInterests"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:background="@android:drawable/edit_text" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="#4CAF50"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>